# RAG

./: api_server.py  excel_head.py  main.py  pyproject.toml  rag.py
web/templates/: index.html
