[project]
name = "0415"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "msoffcrypto-tool>=6.0.0",
    "notebook>=7.5.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pypdf>=6.11.0",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "unstructured[excel]>=0.22.28",
    "xlrd>=2.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
